### Added
- Automatic updates; hooray!